# misnake

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: entity.cpp  entity.h  main.cpp
